Working on test payment with stripe

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 REACT_APP_CHECH_PUBLIC_KEY=pk_26078ab82425205042677377e802722740bde14e7d488
+REACT_APP_STRIPE_PUBLIC_KEY=pk_test_Xszh8NTdzfWy2A8qQIiKw4PN00ug44aqGk
